--- a/.github/workflows/update_blog.yml
+++ b/.github/workflows/update_blog.yml
@@ -32,4 +32,4 @@ jobs:
           git config --global user.name "yumin1209"
           git add .
           git commit -m "🔄 Velog 글 자동 백업 - $(date '+%Y-%m-%d')" || echo "No changes to commit"
-          git push origin main
+          git push https://x-access-token:${{ secrets.GH_PAT }}@github.com/oridungjeol/cs-study.git
