--- a/.github/workflows/update_blog.yml
+++ b/.github/workflows/update_blog.yml
@@ -2,16 +2,18 @@ name: Update Blog Posts
 
 on:
   schedule:
-    - cron: '0 0 * * *'  # 매일 자정(KST)
-  workflow_dispatch:
+    - cron: '0 0 * * *'   # 매일 자정 실행(KST 맞추려면 추가 설정 필요)
+  workflow_dispatch:       # 수동 실행 가능
 
 jobs:
-  backup:
+  update_blog:
     runs-on: ubuntu-latest
 
     steps:
       - name: Checkout repository
         uses: actions/checkout@v2
+        with:
+          token: ${{ secrets.GH_PAT }}   # Personal Access Token 사용 권장
 
       - name: Set up Python
         uses: actions/setup-python@v4
@@ -19,24 +21,15 @@ jobs:
           python-version: '3.x'
 
       - name: Install dependencies
-        run: pip install feedparser
+        run: pip install feedparser gitpython
 
-      - name: Run update_blog.py
-        run: |
-          mkdir -p posts
-          python update_blog.py
+      - name: Run Velog backup script
+        run: python scripts/update_blog.py
 
       - name: Commit and push changes
         run: |
-          git config --global user.email "yumin991209@naver.com"
-          git config --global user.name "yumin1209"
-          
-          # 원격 저장소에서 최신 main 브랜치 가져오기
-          git fetch origin main
-          git reset --hard origin/main
-
+          git config --global user.name "github-actions[bot]"
+          git config --global user.email "github-actions[bot]@users.noreply.github.com"
           git add .
           git commit -m "🔄 Velog 글 자동 백업 - $(date '+%Y-%m-%d')" || echo "No changes to commit"
-
-          # GitHub PAT를 이용한 인증 푸시
-          git push https://x-access-token:${{ secrets.GH_PAT }}@github.com/oridungjeol/cs-study.git main
+          git push origin main
