--- a/.github/workflows/update_blog.yml
+++ b/.github/workflows/update_blog.yml
@@ -32,4 +32,5 @@ jobs:
           git config --global user.email "github-actions[bot]@users.noreply.github.com"
           git add .
           git commit -m "🔄 Velog 글 자동 백업 - $(date '+%Y-%m-%d')" || echo "No changes to commit"
+          git pull origin main --rebase
           git push origin main
