--- a/.github/workflows/update_blog.yml
+++ b/.github/workflows/update_blog.yml
@@ -35,6 +35,4 @@ jobs:
           git config --global user.name "yumin1209"
           git add .
           git commit -m "🔄 Velog 글 자동 백업 - $(date '+%Y-%m-%d')" || echo "No changes to commit"
-          git fetch origin main
-          git reset --soft origin/main
-          git push https://x-access-token:${{ secrets.GH_PAT }}@github.com/oridungjeol/cs-study.git
+          git push --force-with-lease https://x-access-token:${{ secrets.GH_PAT }}@github.com/oridungjeol/cs-study.git
