--- a/.github/workflows/update_blog.yml
+++ b/.github/workflows/update_blog.yml
@@ -2,8 +2,8 @@ name: Update Blog Posts
 
 on:
   schedule:
-    - cron: '0 0 * * *'  # 매일 자정 (UTC 기준, 한국 시간 9시)
-  workflow_dispatch:    # 수동 실행 가능
+    - cron: '0 0 * * *'  # 매일 자정 (UTC 기준, KST 09:00)
+  workflow_dispatch:      # 수동 실행 가능
 
 jobs:
   backup:
@@ -14,7 +14,12 @@ jobs:
         uses: actions/checkout@v2
         with:
           persist-credentials: false
-          fetch-depth: 0  # 전체 히스토리 클론
+          fetch-depth: 0  # 전체 히스토리
+
+      - name: Set git user config
+        run: |
+          git config --global user.email "yumin991209@naver.com"
+          git config --global user.name "yumin1209"
 
       - name: Set up Python
         uses: actions/setup-python@v4
@@ -29,8 +34,6 @@ jobs:
 
       - name: Commit and push changes
         run: |
-          git config --global user.email "yumin991209@naver.com"
-          git config --global user.name "yumin1209"
           git add .
           git commit -m "🔄 Velog 글 자동 백업 - $(date '+%Y-%m-%d')" || echo "No changes to commit"
           git push "https://x-access-token:${{ secrets.GH_PAT }}@github.com/oridungjeol/cs-study.git"
