--- a/.github/workflows/update_blog.yml
+++ b/.github/workflows/update_blog.yml
@@ -2,8 +2,8 @@ name: Update Blog Posts
 
 on:
   schedule:
-    - cron: '0 0 * * *'  # 매일 자정 (UTC 기준, KST 09:00)
-  workflow_dispatch:      # 수동 실행 가능
+    - cron: '0 0 * * *'  # 매일 09:00 KST
+  workflow_dispatch:
 
 jobs:
   backup:
@@ -13,13 +13,12 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v2
         with:
-          persist-credentials: false
-          fetch-depth: 0  # 전체 히스토리
+          fetch-depth: 0
 
-      - name: Set git user config
+      - name: Set git identity
         run: |
-          git config --global user.email "yumin991209@naver.com"
           git config --global user.name "yumin1209"
+          git config --global user.email "yumin991209@naver.com"
 
       - name: Set up Python
         uses: actions/setup-python@v4
@@ -27,13 +26,13 @@ jobs:
           python-version: '3.x'
 
       - name: Install dependencies
-        run: pip install feedparser gitpython
+        run: pip install feedparser
 
-      - name: Run update_blog.py script
+      - name: Run backup script
         run: python scripts/update_blog.py
 
       - name: Commit and push changes
         run: |
-          git add .
+          git add velog-posts
           git commit -m "🔄 Velog 글 자동 백업 - $(date '+%Y-%m-%d')" || echo "No changes to commit"
           git push "https://x-access-token:${{ secrets.GH_PAT }}@github.com/oridungjeol/cs-study.git"
