--- a/.github/workflows/update_blog.yml
+++ b/.github/workflows/update_blog.yml
@@ -34,5 +34,5 @@ jobs:
       - name: Commit and push changes
         run: |
           git add velog-posts
-          git commit -m "🔄 Velog 글 자동 백업 - $(date '+%Y-%m-%d')" || echo "No changes to commit"
+          git commit -m "🔄 $(date '+%Y-%m-%d')" || echo "No changes to commit"
           git push "https://x-access-token:${{ secrets.GH_PAT }}@github.com/oridungjeol/cs-study.git"
